--- a/3DGraph/MainForm.resx
+++ b/3DGraph/MainForm.resx
@@ -117,6 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label9.Text" xml:space="preserve">
+    <value>Программа предназначена для построения графика функции двух переменных z = f(x,y). Программа не чувствительна к регистру. Разрешённые математические операции: 
+sin(x), 
+cos(x), 
+tan(x),
++, -, /, ^ (возведение в степень), sqrt (возведение в квадрат)
+log</value>
+  </data>
   <metadata name="DragControl.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
