--- a/3DGraph/MainForm.resx
+++ b/3DGraph/MainForm.resx
@@ -122,8 +122,9 @@
 sin(x), 
 cos(x), 
 tan(x),
-+, -, /, ^ (возведение в степень), sqrt (возведение в квадрат)
-log</value>
++, -, /, *, ^ (возведение в степень), sqrt (квадратный корень)
+log (натуральный логарифм)
+Десятичные цифры отделяются знаком точки (.)</value>
   </data>
   <metadata name="DragControl.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
